Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Hola Mundo!</h1>
     <h2>67</h2>
     <h3>Anashei</h3>
+    <h3>Puntaje nacional</h3>
     <p>Por Alonso Baeza</p>
 </body>
 </html>
